--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,34 @@
+.hero {
+  box-sizing: border-box;
+}
+.hero__image {
+  position: relative;
+  background-image: url(/images/bg-intro-mobile.svg);
+  background-size: cover;
+  background-position: center center;
+  min-height: 17.5rem;
+}
+.hero__image::before {
+  content: "";
+  position: absolute;
+  background-image: url(/images/image-mockups.png);
+  background-size: 96%;
+  background-position: bottom center;
+  height: 100%;
+  width: 100%;
+}
+.hero__text {
+  text-align: center;
+}
+.hero__text.h1 {
+  right: 50%;
+  margin-bottom: 1.5rem;
+}
+.hero__text p {
+  display: block;
+  margin-bottom: 2.5rem;
+}
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -22,6 +53,10 @@ body {
 }
 body.no-scroll {
   overflow: hidden;
+}
+
+h1, h2, h3 {
+  margin-top: 0px;
 }
 
 .container {
@@ -52,6 +87,10 @@ button, .button {
   background-image: linear-gradient(to right, #00FF00, hsl(192, 70%, 51%));
   color: white;
   font-weight: bold;
+  transition: color 200ms;
+}
+button:hover, .button:hover {
+  color: black;
 }
 
 @media (max-width: 63.9375em) {
@@ -111,30 +150,31 @@ button, .button {
   padding: 0.625rem;
 }
 .header__menu a {
+  position: relative;
   font-size: 0.875rem;
   transition: color 200ms;
 }
 .header__menu a:not(:last-child) {
   margin-right: 32px;
 }
-.header__menu::before {
+.header__menu a::before {
   content: "";
   display: block;
-  position: relative;
+  position: absolute;
   height: 5px;
-  bottom: -49px;
+  bottom: -30px;
   left: 0;
   right: 0;
-  background: lime;
-  background: linear-gradient(to right, #00FF00, hsl(192, 70%, 51%));
+  background: black;
+  background: linear-gradient(to right, black, grey);
   opacity: 0;
   transition: opacity 300ms ease-in-out;
 }
-.header__menu:hover {
-  color: hsl(233, 26%, 24%);
-}
-.header__menu:hover::before {
+.header__menu a:hover::before {
   opacity: 1;
+}
+.header__menu a:hover {
+  color: hsl(233, 26%, 24%);
 }
 .header__logo img {
   width: 8.125rem;
